<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_titlebar_height"
        android:paddingTop="@dimen/header_mark_tb_padding"
        android:paddingBottom="@dimen/header_mark_tb_padding"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/enrich_header_mark_small"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_header_titlebar_height"
        android:background="@color/colorLightYellow"
        android:paddingLeft="@dimen/top_header_titlebar_left_right_padding"
        android:paddingRight="@dimen/top_header_titlebar_left_right_padding">
        <TextView
            android:id="@+id/txtHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/top_header_titlebar_height"
            android:layout_centerInParent="true"
            android:background="@color/colorLightYellow"
            android:gravity="center"
            android:text="@string/str_front_image"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/top_header_titlebar_textsize"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgCardImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:layout_above="@+id/bottomButtonLayout"
            />
        <LinearLayout
            android:id="@+id/bottomButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_above="@+id/bottomCameraLayout"
            android:layout_marginBottom="15dp"
            >

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="@dimen/add_mycontact_layout_button_width"
                android:layout_height="@dimen/add_mycontact_layout_button_height"
                android:text="@string/str_button_cancel"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="@dimen/setting_upload_button_textsize"
                android:background="@drawable/white_roundrect_save_btn"
                android:layout_marginRight="30dp"
                />
            <Button
                android:id="@+id/btnDone"
                android:layout_width="@dimen/add_mycontact_layout_button_width"
                android:layout_height="@dimen/add_mycontact_layout_button_height"
                android:text="@string/str_button_done"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="@dimen/setting_upload_button_textsize"
                android:background="@drawable/white_roundrect_save_btn"
                android:layout_alignParentBottom="true"
                />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/bottomCameraLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_header_titlebar_height"
            android:background="@color/colorLightYellow"
            android:layout_alignParentBottom="true"
            android:paddingLeft="5dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            >
            <ImageView
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/clickable_camera_icon"
                />
            <ImageView
                android:id="@+id/btnRotateImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/button_rotate"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>